2004-03-11  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-area-composer.c, cong-editor-area-composer.h, cong-editor-area-line.c, cong-editor-area-line.h, cong-editor-line-manager-simple.c, cong-editor-line-manager.c, cong-editor-node-element-span.c, cong-editor-node.c, cong-editor-node.h

	Added CongAreaCreationGeometry to handle information relating to area creation (e.g. line width and initial indent) that might be relevant when deciding if areas needs regenerating; added an area regeneration when nodes are added/removed that can be invoked upon the successor nodes (eventually we will optimise and only do it when necessary based upon CongAreaCreationGeometry before/after each change).

	* cong-editor-widget3.c, cong-plugin.c

	Suppressing more debug log spewage

2004-03-10  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-line-iter-span-wrapper.c

	Fixed stupid typo that was ref-ing rather than unref-ing in the dispose handler.  I believe the code no longer leaks any CongEditorLineIter objects.
	
	* cong-editor-line-manager.c

	Suppress some debug logging; fix reference leaks to CongEditorLineIter objects

	* cong-traversal-node.c, cong-traversal-node.h, cong-document.h

	Ported CongTraversalNode over to cong-object macros in order to track reference leaks

	* cong-document-traversal.c

	Fixed a leak of the CongTraversalNode subtree (and hence of CongEditorNode objects) when doing an add node before/after operation; was happening when undoing an apply span tag operation.

2004-03-09  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-menus.c, cong-object.c, cong-object.h

	Debug window that list all objects of each class in a tree view, to help track leaks.
